examples/failing/Reserved.purs
module Main where

(<) :: Number -> Number -> Number
(<) a b = !(a >= b)
